Quartz sync: Apr 4, 2024, 3:33 PM

--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -1,4 +1,9 @@
+---
+date created: Monday, 11. March 2024, 14:30
+date modified: Thursday, 4. April 2024, 15:25
+---
+
 ## Module
--  [[DBS]]
--  [[SWT]]
+- [[DBS]]
+- [[SWT]]
 
