--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -1,9 +1,9 @@
 ---
 date created: Monday, 11. March 2024, 14:30
-date modified: Thursday, 4. April 2024, 15:25
+date modified: Thursday, 4. April 2024, 15:35
 ---
 
 ## Module
 - [[DBS]]
-- [[SWT]]
+- [[SWT]] (coming soon)
 
