Quartz sync: Apr 4, 2024, 11:31 PM

--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -1,6 +1,8 @@
 ---
+tags: 
+fach: 
 date created: Monday, 11. March 2024, 14:30
-date modified: Thursday, 4. April 2024, 15:35
+date modified: Thursday, 4. April 2024, 23:09
 ---
 
 ## Module
