Quartz sync: Apr 9, 2024, 8:45 PM

--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -2,10 +2,10 @@
 tags: 
 fach: 
 date created: Monday, 11. March 2024, 14:30
-date modified: Thursday, 4. April 2024, 23:09
+date modified: Tuesday, 9. April 2024, 19:36
 ---
 
 ## Module
 - [[DBS]]
-- [[SWT]] (coming soon)
+- other modules following soon 
 
