--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -2,10 +2,13 @@
 tags: 
 fach: 
 date created: Monday, 11. March 2024, 14:30
-date modified: Tuesday, 9. April 2024, 19:36
+date modified: Wednesday, 10. April 2024, 02:14
 ---
 
 ## Module
-- [[DBS]]
-- other modules following soon 
 
+- [[DBS|Datenbanksysteme (DBS)]]
+
+## ## Additional Modules
+
+Currently, no other modules are planned for this semester, as I started this project towards the end of my third semester. If you would like me to incorporate my study notes retrospectively, please send me an email. Should there be sufficient interest, I will consider adding the specified module.
