Quartz sync: Apr 10, 2024, 12:11 PM

--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -2,12 +2,13 @@
 tags: 
 fach: 
 date created: Monday, 11. March 2024, 14:30
-date modified: Wednesday, 10. April 2024, 02:14
+date modified: Wednesday, 10. April 2024, 12:09
 ---
 
 ## Module
 
 - [[DBS|Datenbanksysteme (DBS)]]
+- [Softwaretechnik (SWT)](https://hustle-swt.vercel.app/)
 
 ## ## Additional Modules
 
