--- a/content/3.Semester/3.Semester.md
+++ b/content/3.Semester/3.Semester.md
@@ -2,7 +2,7 @@
 tags: 
 fach: 
 date created: Monday, 11. March 2024, 14:30
-date modified: Wednesday, 10. April 2024, 12:09
+date modified: Wednesday, 10. April 2024, 12:51
 ---
 
 ## Module
@@ -10,6 +10,6 @@ date modified: Wednesday, 10. April 2024, 12:09
 - [[DBS|Datenbanksysteme (DBS)]]
 - [Softwaretechnik (SWT)](https://hustle-swt.vercel.app/)
 
-## ## Additional Modules
+## Additional Modules
 
 Currently, no other modules are planned for this semester, as I started this project towards the end of my third semester. If you would like me to incorporate my study notes retrospectively, please send me an email. Should there be sufficient interest, I will consider adding the specified module.
