Quartz sync: Apr 16, 2024, 1:06 AM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -1,10 +1,13 @@
 ---
 tags: 
 fach: 
+date created: Monday, 15. April 2024, 12:01
+date modified: Tuesday, 16. April 2024, 01:02
 ---
-# Modules 
 
-## Info 
+# Modules
+
+## Info
 - [[Formale Sprachen und Komplexität]]
 - [[Rechnernetze und Verteilte Systeme]]
 - [[IT-Kompetenz]]
