Quartz sync: Apr 16, 2024, 1:07 AM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -17,5 +17,5 @@ date modified: Tuesday, 16. April 2024, 01:02
 
 - [[Fortgeschrittene Statistische Software]]
 - [[Einführung in die Bayes-Statistik]]
-- [[Einführung in die linearen statistischen Mod.]]
+- [[Einführung in die linearen statistischen Modellierung]]
 - [[Einführung in das maschinelle Lernen]]
