Quartz sync: Apr 16, 2024, 1:19 AM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -1,21 +1,30 @@
 ---
-tags: 
+tags:
+  - 4semester
 fach: 
 date created: Monday, 15. April 2024, 12:01
-date modified: Tuesday, 16. April 2024, 01:02
+date modified: Tuesday, 16. April 2024, 01:16
 ---
 
 # Modules
 
-## Info
-- [[Formale Sprachen und Komplexität]]
-- [[Rechnernetze und Verteilte Systeme]]
+## Info Modules
+- [[Formale Sprachen und Komplexität]] (in work)
+- [[Rechnernetze und Verteilte Systeme]] (in work)
 - [[IT-Kompetenz]]
-- [[Bachelorseminar: Software Security]]
+- [[Bachelorseminar-Software Security]] (in work)
 
-## Statistik
+## Statistic Modules
 
-- [[Fortgeschrittene Statistische Software]]
-- [[Einführung in die Bayes-Statistik]]
-- [[Einführung in die linearen statistischen Modellierung]]
-- [[Einführung in das maschinelle Lernen]]
+- [[Fortgeschrittene Statistische Software]] (in work)
+
+### Selectable Modules for Statistics
+
+I am currently unsure which of the bottom four modules I will ultimately choose. They are likely to be updated in the first few weeks of the 4th semester, after which three of them will become deprecated and I will choose one:
+
+- [[Einführung in die Bayes-Statistik]] (in work)
+- [[Einführung in die linearen statistischen Modellierung]] (in work)
+- [[Einführung in das maschinelle Lernen]] (in work)
+- [[Einführung in Python]] (in work)
+
+These updates are intended to provide the most current and relevant content. I will make my decision based on these updates and the modules' relevance to my future studies.
