--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -3,14 +3,14 @@ tags:
   - 4semester
 fach: 
 date created: Monday, 15. April 2024, 12:01
-date modified: Tuesday, 16. April 2024, 01:16
+date modified: Tuesday, 16. April 2024, 11:22
 ---
 
 # Modules
 
 ## Info Modules
-- [[Formale Sprachen und Komplexität]] (in work)
-- [[Rechnernetze und Verteilte Systeme]] (in work)
+- [[FSK|Formale Sprachen und Komplexität (FSK)]] (in work)
+- [[Rechnernetze und Verteilte Systeme|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
 - [[IT-Kompetenz]]
 - [[Bachelorseminar-Software Security]] (in work)
 
@@ -23,7 +23,7 @@ date modified: Tuesday, 16. April 2024, 01:16
 I am currently unsure which of the bottom four modules I will ultimately choose. They are likely to be updated in the first few weeks of the 4th semester, after which three of them will become deprecated and I will choose one:
 
 - [[Einführung in die Bayes-Statistik]] (in work)
-- [[Einführung in die linearen statistischen Modellierung]] (in work)
+- [[LiMo-Intro-ErsteVL]] (in work)
 - [[Einführung in das maschinelle Lernen]] (in work)
 - [[Einführung in Python]] (in work)
 
