Quartz sync: Apr 21, 2024, 4:20 PM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -3,14 +3,14 @@ tags:
   - 4semester
 fach: 
 date created: Monday, 15. April 2024, 12:01
-date modified: Tuesday, 16. April 2024, 11:22
+date modified: Sunday, 21. April 2024, 15:30
 ---
 
 # Modules
 
 ## Info Modules
 - [[FSK|Formale Sprachen und Komplexität (FSK)]] (in work)
-- [[Rechnernetze und Verteilte Systeme|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
+- [[RNVS|Rechnernetze und Verteilte Systeme|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
 - [[IT-Kompetenz]]
 - [[Bachelorseminar-Software Security]] (in work)
 
