Quartz sync: Apr 22, 2024, 12:31 PM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -23,7 +23,7 @@ date modified: Sunday, 21. April 2024, 15:30
 I am currently unsure which of the bottom four modules I will ultimately choose. They are likely to be updated in the first few weeks of the 4th semester, after which three of them will become deprecated and I will choose one:
 
 - [[Einführung in die Bayes-Statistik]] (in work)
-- [[LiMo-Intro-ErsteVL]] (in work)
+- [[Uni2/Semester/4.Semester/Statistik/LiMo/Vorlesung/1.VL/LiMo-Intro-ErsteVL]] (in work)
 - [[Einführung in das maschinelle Lernen]] (in work)
 - [[Einführung in Python]] (in work)
 
