Quartz sync: Apr 22, 2024, 12:55 PM

--- a/content/4.Semester/Statistik/LiMo/Vorlesung/3.VL/LiMo-3VL-22-04-24.md
+++ b/content/4.Semester/Statistik/LiMo/Vorlesung/3.VL/LiMo-3VL-22-04-24.md
@@ -8,3 +8,8 @@ Thema:
 date created: Monday, 22. April 2024, 12:04
 date modified: Monday, 22. April 2024, 12:05
 ---
+Angefangen bei S.20 Skript 1 
+
+# Themen 
+- KQ-Schätzung
+- 
