Quartz sync: Apr 23, 2024, 4:13 PM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -3,20 +3,21 @@ tags:
   - 4semester
 fach: 
 date created: Monday, 15. April 2024, 12:01
-date modified: Sunday, 21. April 2024, 15:30
+date modified: Tuesday, 23. April 2024, 15:55
 ---
 
 # Modules
 
 ## Info Modules
 - [[FSK|Formale Sprachen und Komplexität (FSK)]] (in work)
-- [[RNVS|Rechnernetze und Verteilte Systeme|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
+- [[RNVS|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
 - [[IT-Kompetenz]]
 - [[Bachelorseminar-Software Security]] (in work)
 
 ## Statistic Modules
 
-- [[Fortgeschrittene Statistische Software]] (in work)
+- [[FortStaSoft]]
+- [[BaySta]]
 
 ### Selectable Modules for Statistics
 
