Quartz sync: Apr 24, 2024, 12:03 AM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -3,13 +3,13 @@ tags:
   - 4semester
 fach: 
 date created: Monday, 15. April 2024, 12:01
-date modified: Tuesday, 23. April 2024, 15:55
+date modified: Tuesday, 23. April 2024, 23:44
 ---
 
 # Modules
 
 ## Info Modules
-- [[FSK|Formale Sprachen und Komplexität (FSK)]] (in work)
+- [[Uni2/Semester/4.Semester/Informatik/FSK/FSK|Formale Sprachen und Komplexität (FSK)]] (in work)
 - [[RNVS|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
 - [[IT-Kompetenz]]
 - [[Bachelorseminar-Software Security]] (in work)
