--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-2-VL/FSK-2VL-23-04-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-2-VL/FSK-2VL-23-04-2024.md
@@ -4,10 +4,10 @@ tags:
   - FSK
   - vorlesung
   - informatik
-fach: "[[FSK]]"
-Thema:
+fach: "[[Uni2/Semester/4.Semester/Informatik/FSK/FSK]]"
+Thema: 
 date created: Tuesday, 23. April 2024, 14:29
-date modified: Tuesday, 23. April 2024, 15:53
+date modified: Tuesday, 23. April 2024, 23:44
 ---
 
 # Skript
