Quartz sync: Apr 25, 2024, 4:08 PM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -3,7 +3,7 @@ tags:
   - 4semester
 fach: 
 date created: Monday, 15. April 2024, 12:01
-date modified: Tuesday, 23. April 2024, 23:44
+date modified: Thursday, 25. April 2024, 13:50
 ---
 
 # Modules
@@ -23,9 +23,9 @@ date modified: Tuesday, 23. April 2024, 23:44
 
 I am currently unsure which of the bottom four modules I will ultimately choose. They are likely to be updated in the first few weeks of the 4th semester, after which three of them will become deprecated and I will choose one:
 
-- [[Einführung in die Bayes-Statistik]] (in work)
-- [[LiMo-1VL-15-04-24]] (in work)
-- [[Einführung in das maschinelle Lernen]] (in work)
-- [[Einführung in Python]] (in work)
+- [[BaySta|Einführung in die Bayes-Statistik]] (in work)
+- [[LiMo]] 
+- [[I2ML]]
+- [[Einführung in Python]] 
 
 These updates are intended to provide the most current and relevant content. I will make my decision based on these updates and the modules' relevance to my future studies.
