Quartz sync: Apr 26, 2024, 9:14 AM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -10,7 +10,7 @@ date modified: Thursday, 25. April 2024, 13:50
 
 ## Info Modules
 - [[Uni2/Semester/4.Semester/Informatik/FSK/FSK|Formale Sprachen und Komplexität (FSK)]] (in work)
-- [[RNVS|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
+- [[Semester/4.Semester/Informatik/RNVS/RNVS|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
 - [[IT-Kompetenz]]
 - [[Bachelorseminar-Software Security]] (in work)
 
