Quartz sync: Apr 26, 2024, 11:14 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
@@ -10,7 +10,7 @@ Thema:
   - "[[Rechnernetze]]"
 Benötigte Zeit: 
 date created: Friday, 26. April 2024, 09:13
-date modified: Friday, 26. April 2024, 10:09
+date modified: Friday, 26. April 2024, 11:02
 ---
 
 *Geht weiter ab Kapitel 2-S.31*
@@ -160,11 +160,121 @@ Deswegen Modularität
 - Protokoll $\approx$ Documentation
 	- Protokollfunktion
 		- Verbindungsmanagement
-			- Aufbau,Abbau
-			- Multiplex,Splitting
-			- Protokoll Selektion fuer die verschiedenen Schichten
-			- **ACHTUNG!:** Transporteinheitten haben schichtspezifische verschiedene BEzeichnungen *(z.B.:)*
+			- Aufbau, Abbau
+			- Multiplex, Splitting
+			- Protokoll Selektion für die verschiedenen Schichten
+			- **ACHTUNG!:** Transporteinheiten haben schichtspezifische verschiedene Bezeichnungen *(z.B.: Nachricht, Segment,Paket, Block,Frame)*
+		- Datenhandhabung
+			- Zerlegung, Segmentierung
+			- Versehen von Nutzdaten mit Steuerinformation
+			- Wegwahl *(routing)*
+				- bspw. Streaminganbieter liegt jemanden immer an nächstgelegenen Server
+			- Flusssteuerung *(flow control)*
+				- Zur Behandlung von Staus im Internet
+		- Fehlerbehandlung
+			- Verfälschung der Daten
+				- Prüfnummern, Paritätsbits *(Rechnerarchitektur VL)*
+			- Verlust der Daten
+				- Sequenznummern, Quittungen, Timeout
+			- Duplikate
+				- Sequenznummer, uuid
+			- Falsche Reihenfolge
+				- Sequenzdiagramm
+			- Verbindungsabbruch
+				- Reset, Wiederaufsatzpunkte
+- Protokollspezifikation:
+	- Ablaufdiagramme, Perinetze
+		- Einfach wie man Code etc. dokumentiert
+	- Protokollverifikation und Validierung
+		- Korrektheit
+		- Verklemmungsfreiheit *(Deadlocks)*
+	- Protokolltests
+		- mit Partner (man testet ob Kommunikation funktioniert)
+		- gegen Standard, erfüllt meine Implementierung dem Standard?
 
 **Schnittstelle:**
 - Spezifikation, die den Zugriff auf den jeweiligen Dienst regelt 
 
+## Diagramme
+
+- Sequenzdiagramm
+- Flussdiagramm
+
+## RFC (Request for Comment)
+- Bitte um Kommentare
+- IETF und Internet Society
+- Enthalten technische und organisatorische Ideen für die Entwicklung des Internets
+- Community diskutiert, ob Dokument passier
+- RFC [Humor](<https://de.wikipedia.org/wiki/Request_for_Comments#Humor_in_RFC:~:text=(HTTP)%20genannt.-,Humor%20in%20RFC,-%5BBearbeiten%20%7C>)
+ - [ ] RFC 1958 [lesen](https://datatracker.ietf.org/doc/html/rfc1958)
+ - RFC und Internet ist demokratisch entstanden
+ - Konstruktionsprinzip des Internets
+	 - Schichtung
+		 - Wie wird das System (=Rechnernetze) aufgeteilt
+	 - Ende-zu-Ende-Prinzip
+	 - Gemeinsmes "Schicksal"
+
+### Zusammenfassung: S.78
+
+**Hinweise**
+- Themen und Konzepte können:
+  - Schichtspezifisch,
+  - Protokollspezifisch,
+  - Internetspezifisch, oder
+  - Schichtunabhängig sein.
+- Reihenfolge wird durch die Struktur der Vorlesung bestimmt.
+
+**Lesempfehlung:** Mark Handley, Why the Internet just works
+- Das Internet wurde nicht aus einem use-case erschaffen
+- Erfüllt nicht oft was man möchtet, zb netflix 4k abo, aber das Internet reicht nicht für 4k 
+
+# Datenfluss
+
+```mermaid
+graph TD;
+    Transport[Transport der Nachricht]
+    Weg[Weg durch das Netz]
+    Datenuebertragung[Datenübertragung]
+
+    Transport -->|Aufbau u Abbau Verbindung| Weg
+    Transport -->|Mit/ohne Zustellgarantie| Weg
+    Transport -->|Über unsichere Kanäle| Weg
+    Transport -->|Mit Verkehrsmanagement Stau| Weg
+
+    Weg -->|Vermittlung/Pfadschaltung| Datenuebertragung
+    Weg -->|Wegewahl im lokalen Netz / im Internet| Datenuebertragung
+
+    Datenuebertragung -->|Sicherung| End[Ende]
+    Datenuebertragung -->|Bitübertragung| End
+```
+
+```mermaid
+graph TD;
+    A[Nachricht, Ziel] -->|Transport der Nachricht| B[Daten, Verb.Info]
+    B -->|Weg durch das Netz| C[Daten, Weginfo]
+    C -->|Datenübertragung| D[Bits, Kanal]
+    D -->|Empfang der Daten| E[Nachricht, Ursprung]
+
+    E -->|Bestätigung o.Ä.| C
+    C -->|Routing-Infos, Zustandsinfos| B
+    B -->|Quittungen, Fehlermeldungen| A
+
+```
+
+
+graph LR;
+    A[Nachricht, Ziel] -->|Daten, Verb.Info| B[Transport der Nachricht]
+    B -->|Daten, Verb.Info| C[Weg durch das Netz]
+    C -->|Daten,Weginfo| D[Datenübertragung]
+    D -->|Empfang der Daten| E[Nachricht, Ursprung]
+
+    E -->|Bestätigung o.Ä.| C
+    C -->|Routing-Infos, Zustandsinfos| B
+    B -->|Quittungen, Fehlermeldungen| A
+
+## Horizontale und Vertikale Kommunikation
+
+- vertikale
+	- mit einer benachberten Schicht
+- horizontale
+	- zwischen Instanzen der gleichen Schichte
