Quartz sync: Apr 26, 2024, 11:59 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
@@ -10,10 +10,11 @@ Thema:
   - "[[Rechnernetze]]"
 Benötigte Zeit: 
 date created: Friday, 26. April 2024, 09:13
-date modified: Friday, 26. April 2024, 11:02
+date modified: Friday, 26. April 2024, 11:37
 ---
 
 *Geht weiter ab Kapitel 2-S.31*
+**Ende:** 96
 # TODOs
 
 - [ ] tim berners lee documentary
@@ -247,34 +248,54 @@ graph TD;
     Datenuebertragung -->|Sicherung| End[Ende]
     Datenuebertragung -->|Bitübertragung| End
 ```
-
+- [ ] Richtiges diagramm aus S.88
 ```mermaid
 graph TD;
-    A[Nachricht, Ziel] -->|Transport der Nachricht| B[Daten, Verb.Info]
-    B -->|Weg durch das Netz| C[Daten, Weginfo]
-    C -->|Datenübertragung| D[Bits, Kanal]
-    D -->|Empfang der Daten| E[Nachricht, Ursprung]
+    A[Sender, Empfänger] -->|Nachricht| B[Transport der Nachricht]
+    B -->|Daten, Verb.Info| C[Weg durch das Netz]
+    C -->|Daten,Weginfo| D[Datenübertragung]
+    D -->|Bits,Kanal| E[umkehrpunkt]
 
-    E -->|Bestätigung o.Ä.| C
+    E -->|Bits,Kanal| D
     C -->|Routing-Infos, Zustandsinfos| B
     B -->|Quittungen, Fehlermeldungen| A
 
 ```
 
 
-graph LR;
+graph TD;
     A[Nachricht, Ziel] -->|Daten, Verb.Info| B[Transport der Nachricht]
     B -->|Daten, Verb.Info| C[Weg durch das Netz]
     C -->|Daten,Weginfo| D[Datenübertragung]
     D -->|Empfang der Daten| E[Nachricht, Ursprung]
 
-    E -->|Bestätigung o.Ä.| C
-    C -->|Routing-Infos, Zustandsinfos| B
+    E -->|Bits,Kanal| D
+    D -->|Routing-Infos, Zustandsinfos| C
     B -->|Quittungen, Fehlermeldungen| A
 
 ## Horizontale und Vertikale Kommunikation
 
 - vertikale
-	- mit einer benachberten Schicht
+	- mit einer benachbarten Schicht
 - horizontale
 	- zwischen Instanzen der gleichen Schichte
+
+## Nutzdaten & Steuerinformation
+
+- innerhalb des Schichtenmodells
+	- Nutzdaten
+	- Steuerinformation
+- Welcher Teil Nutzdaten und welcher Steuerinformation
+	- auf welcher Schicht wir uns befinden
+	- ob Kommunikation nach oben, nach unten oder zur Peer-Entität
+
+## Ablauf des Datenflusses (S.93-97)
+
+## Zusammenfassung Dateneinheiten (S.98)
+
+## Klausurrelevant : "Schnitte definieren" S.(101)
+
+## Protokollschnitt vs Systemschnitt
+
+- Protokollschnitt zwischen Peer-Entitäten zb. Kunde und Weinhändler
+- Systemschnitt ist eine konkrete Verbindung zwischen zwei Expliziten Geräten z.B. mein Handy und dem WiFi-Access-Point im Saal
