Quartz sync: Apr 26, 2024, 9:45 PM

--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -1,16 +1,17 @@
 ---
+Thema:
 tags:
   - 4semester
 fach: 
 date created: Monday, 15. April 2024, 12:01
-date modified: Thursday, 25. April 2024, 13:50
+date modified: Friday, 26. April 2024, 21:43
 ---
 
 # Modules
 
 ## Info Modules
 - [[Uni2/Semester/4.Semester/Informatik/FSK/FSK|Formale Sprachen und Komplexität (FSK)]] (in work)
-- [[Semester/4.Semester/Informatik/RNVS/RNVS|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
+- [[RNVS|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
 - [[IT-Kompetenz]]
 - [[Bachelorseminar-Software Security]] (in work)
 
