--- a/content/4.Semester/4.Semester.md
+++ b/content/4.Semester/4.Semester.md
@@ -4,14 +4,14 @@ tags:
   - 4semester
 fach: 
 date created: Monday, 15. April 2024, 12:01
-date modified: Friday, 26. April 2024, 21:43
+date modified: Tuesday, 30. April 2024, 13:22
 ---
 
 # Modules
 
 ## Info Modules
-- [[Uni2/Semester/4.Semester/Informatik/FSK/FSK|Formale Sprachen und Komplexität (FSK)]] (in work)
-- [[RNVS|Rechnernetze und Verteilte Systeme (RNVS)]] (in work)
+- [[FSK|FSK (Formale Sprachen und Komplexität) ]] (in work)
+- [[RNVS|RNVS (Rechnernetze und Verteilte Systeme)]] (in work)
 - [[IT-Kompetenz]]
 - [[Bachelorseminar-Software Security]] (in work)
 
@@ -24,7 +24,7 @@ date modified: Friday, 26. April 2024, 21:43
 
 I am currently unsure which of the bottom four modules I will ultimately choose. They are likely to be updated in the first few weeks of the 4th semester, after which three of them will become deprecated and I will choose one:
 
-- [[BaySta|Einführung in die Bayes-Statistik]] (in work)
+- [[BaySta|Einführung in die Bayes-Statistik]] (BaysSta got selected)
 - [[LiMo]] 
 - [[I2ML]]
 - [[Einführung in Python]] 
