Quartz sync: Apr 30, 2024, 3:30 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-3-VL/FSK-3VL-30-04-24.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-3-VL/FSK-3VL-30-04-24.md
@@ -8,13 +8,14 @@ fach: "[[FSK]]"
 Thema: 
 Benötigte Zeit:
 date created: Tuesday, 30. April 2024, 13:22
-date modified: Tuesday, 30. April 2024, 13:54
+date modified: Tuesday, 30. April 2024, 15:03
 ---
 
+- [ ] Müllzustand DFAs wiederholen
 # Themen
 - **Skript:**
 	- vl-03a-ft-regularitaet-von-deterministischen-endlichen-automaten-und-nichtdeterministische-endliche-automaten
-	- vl-03b-ft-determinisierung-von-endlichen-automaten
+	- vl-03b-ft-determinisierung-von-endlichen-automatene
 	- vl-03c-ft-nichtdeterministische-endliche-automaten-mit-epsilon-uebergaengen
 
 # VL-03a
@@ -22,6 +23,7 @@ date modified: Tuesday, 30. April 2024, 13:54
 
 - Wiederholung DFA
 	- bestehend aus 5-Tupel
+	- für jede DFA gibt es eine Grammatik aber nicht für jede Grammatik eine DFA
  >[!info]- Widerholung DFAs
  >## Definition
  >Ein deterministischer endlicher Automat (deterministic finite automaton, DFA) ist ein 5-Tupel $M = (Z, \Sigma, \delta, z_0, E)$, wobei:
@@ -38,6 +40,7 @@ date modified: Tuesday, 30. April 2024, 13:54
 	- Automat darf mehrere Wege für ein Buchstaben haben
 	- Darf diesen willkürlich aussuchen
 	- machen Konstruktionen einfacher
+- Verwerfender Lauf bedeutet nicht, dass Wort nicht drin ist in Sprache, sonder der Lauf es nicht gefunden hat
 	```mermaid
 	graph LR
 	id1((z)) --a--> id2((z1))
@@ -55,9 +58,9 @@ date modified: Tuesday, 30. April 2024, 13:54
 
 ## Themen
 
-- **Determinisierung von endlichen Automaten**
-	- NFAs und ihre Rolle in der Akzeptanz regulärer Sprachen
-	- Potenzmengenkonstruktion zur Transformierung von NFAs in DFAs
-	- Theoretische Grundlagen und Beweise zur Determinisierung
-	- Beispiele für die Konstruktion von NFAs aus regulären Grammatiken
-	- Analyse der Komplexität und Größe von Automaten in Bezug auf Zustände und Übergänge
+- NFAs und ihre Rolle in der Akzeptanz regulärer Sprachen
+	- Beispiel für
+- Potenzmengenkonstruktion zur Transformierung von NFAs in DFAs
+- Theoretische Grundlagen und Beweise zur Determinisierung
+- Beispiele für die Konstruktion von NFAs aus regulären Grammatiken
+- Analyse der Komplexität und Größe von Automaten in Bezug auf Zustände und Übergänge
