Quartz sync: May 1, 2024, 5:55 AM

--- a/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-3-VL/FSK-3VL-30-04-24.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Vorlesungen/FSK-3-VL/FSK-3VL-30-04-24.md
@@ -8,7 +8,7 @@ fach: "[[FSK]]"
 Thema: 
 Benötigte Zeit:
 date created: Tuesday, 30. April 2024, 13:22
-date modified: Tuesday, 30. April 2024, 15:03
+date modified: Tuesday, 30. April 2024, 15:41
 ---
 
 - [ ] Müllzustand DFAs wiederholen
@@ -58,9 +58,13 @@ date modified: Tuesday, 30. April 2024, 15:03
 
 ## Themen
 
+- NFA und DFA stellen die gleiche reguläre Sprache dar, NFAs nur einfacher als DFAs
 - NFAs und ihre Rolle in der Akzeptanz regulärer Sprachen
 	- Beispiel für
 - Potenzmengenkonstruktion zur Transformierung von NFAs in DFAs
 - Theoretische Grundlagen und Beweise zur Determinisierung
 - Beispiele für die Konstruktion von NFAs aus regulären Grammatiken
 - Analyse der Komplexität und Größe von Automaten in Bezug auf Zustände und Übergänge
+- Knotenanzahl:
+	- NFA: $2n-1$
+	- DFA: $2^n$ 
