Quartz sync: May 1, 2024, 8:55 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
@@ -17,7 +17,7 @@ date modified: Saturday, 27. April 2024, 02:14
 **Ende:** 96
 # TODOs
 
-- [ ] tim berners lee documentary
+- [x] tim berners lee documentary [completion:: 2024-05-01]
 - [ ] djkstra docu
 # Themen der 2VL
 
