Quartz sync: May 2, 2024, 2:31 PM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
@@ -10,7 +10,7 @@ Thema:
   - "[[Rechnernetze]]"
 Benötigte Zeit: 
 date created: Friday, 26. April 2024, 09:13
-date modified: Saturday, 27. April 2024, 02:14
+date modified: Thursday, 2. May 2024, 13:48
 ---
 
 *Geht weiter ab Kapitel 2-S.31*
@@ -79,7 +79,7 @@ date modified: Saturday, 27. April 2024, 02:14
 		2. The Internet must support multiple types of communications service.
 			- verschiedene Arten der Kommunikation, zoom,moodle,email etc.
 		3. The Internet architecture must accommodate a variety of networks. 
-			- bis zu einem bestimmten punkt organisieren, zb lrz bis in den Saal ab da wird es frei und man muss entscheiden wie es danach zusammenspielt
+			- bis zu einem bestimmten punkt organisieren, z.B. lrz bis in den Saal ab da wird es frei und man muss entscheiden wie es danach zusammenspielt
 		4. The Internet architecture must permit distributed management of its resources. 
 			- verschiedene Arten der Kommunikation, zoom,moodle,email etc.
 		5. The Internet architecture must be cost effective. 
@@ -227,7 +227,7 @@ Deswegen Modularität
 
 **Lesempfehlung:** Mark Handley, Why the Internet just works
 - Das Internet wurde nicht aus einem use-case erschaffen
-- Erfüllt nicht oft was man möchtet, zb netflix 4k abo, aber das Internet reicht nicht für 4k 
+- Erfüllt nicht oft was man möchtet, z.B. netflix 4k abo, aber das Internet reicht nicht für 4k 
 
 # Datenfluss
 
@@ -297,5 +297,5 @@ graph TD;
 
 ## Protokollschnitt vs Systemschnitt
 
-- Protokollschnitt zwischen Peer-Entitäten zb. Kunde und Weinhändler
+- Protokollschnitt zwischen Peer-Entitäten z.B.. Kunde und Weinhändler
 - Systemschnitt ist eine konkrete Verbindung zwischen zwei Expliziten Geräten z.B. mein Handy und dem WiFi-Access-Point im Saal
