Quartz sync: May 3, 2024, 1:47 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
@@ -14,9 +14,7 @@ date modified: Friday, 3. May 2024, 01:31
 Geht weiter ab : S.96 Kapitel 2
 
 
->[!summary]- Vorabzusammenfassung (auführlich)
-> # Vorabzusammenfassung
-> 
+>[!tip] Kurzüberblick
 > ## Strukturierte Darstellung des Netzwerkkommunikationsmodells
 > 
 > ## Datenfluss
@@ -55,7 +53,8 @@ Geht weiter ab : S.96 Kapitel 2
 > 
 > Diese strukturierte Darstellung zeigt eine klare Aufteilung der Netzwerkarchitektur und Kommunikation, die für das Verständnis und die Entwicklung von Netzwerkanwendungen wesentlich ist.
 > 
-> 
+
+>[!summary]- Vorabzusammenfassung 
 > # Datenfluss in Rechnernetzen und verteilten Systemen
 > 
 > ## Überblick
