Quartz sync: May 3, 2024, 9:32 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
@@ -8,7 +8,7 @@ fach: "[[RNVS]]"
 Thema: 
 Benötigte Zeit:
 date created: Thursday, 2. May 2024, 23:16
-date modified: Friday, 3. May 2024, 01:47
+date modified: Friday, 3. May 2024, 09:31
 ---
 
 Geht weiter ab : S.96 Kapitel 2
@@ -305,3 +305,15 @@ Geht weiter ab : S.96 Kapitel 2
 > ## Abschlussgedanken
 > 
 > Rechnernetze und verteilte Systeme bilden das Rückgrat der modernen Kommunikation. Ihre Grundprinzipien und Technologien sind für das Verständnis der digitalen Welt unerlässlich. Von den Grundlagen des Datenflusses bis hin zur Entwicklung komplexer Netzwerkanwendungen bietet dieses Feld eine faszinierende Mischung aus Theorie und Praxis, die es zu erforschen gilt.
+
+# Wiederholung
+
+## Schichten im Internet S.83
+
+- Wie eine Nachricht aufgebaut ist
+- Messenger X worüber Alice Nachrichten verschicken will
+	- Zum verschicken dieser Nachricht brauchen wir folgende Funktionen:
+		- sendeNachricht(Zielort,Nachricht) → Ziel hier ist Bob
+			- Dienst A (Prio,Absender,Ziel,Nachricht) → Ziel hier ist Bobs physische Adresse
+				- Dienst A (x,y,z,d)
+					- Dienst F (adresse zum nächsten Knoten) → gibt mehrere Dienste, da mehrere Wege durch Netz Dienst F ist aus der Schicht Weg durch das NEtz
