Quartz sync: May 3, 2024, 9:52 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
@@ -5,11 +5,14 @@ tags:
   - RNVS
   - vorlesung
 fach: "[[RNVS]]"
-Thema: 
-Benötigte Zeit:
+Thema: "[[TCP]]"
+Benötigte Zeit: 
 date created: Thursday, 2. May 2024, 23:16
-date modified: Friday, 3. May 2024, 09:31
+date modified: Friday, 3. May 2024, 09:41
 ---
+# TODO
+
+- [ ] IDU,ICI,PCI,SDU,UD,PDU Merkhilfen und Merkzettel was was ist
 
 Geht weiter ab : S.96 Kapitel 2
 
@@ -313,7 +316,25 @@ Geht weiter ab : S.96 Kapitel 2
 - Wie eine Nachricht aufgebaut ist
 - Messenger X worüber Alice Nachrichten verschicken will
 	- Zum verschicken dieser Nachricht brauchen wir folgende Funktionen:
-		- sendeNachricht(Zielort,Nachricht) → Ziel hier ist Bob
-			- Dienst A (Prio,Absender,Ziel,Nachricht) → Ziel hier ist Bobs physische Adresse
+		- **Schnitstelle:** sendeNachricht(Zielort,Nachricht) → Ziel hier ist Bob
+			- **Protokoll** Dienst A (Prio,Absender,Ziel,Nachricht) → Ziel hier ist Bobs physische Adresse
 				- Dienst A (x,y,z,d)
-					- Dienst F (adresse zum nächsten Knoten) → gibt mehrere Dienste, da mehrere Wege durch Netz Dienst F ist aus der Schicht Weg durch das NEtz
+					- Dienst F (adresse zum nächsten Knoten) → gibt mehrere Dienste, da mehrere Wege durch Netz Dienst F ist aus der Schicht Weg durch das Netz
+
+Nachricht ist Teil von **Nutzdaten**
+Alice ist **ICI**
+Nachricht is **ID**
+Beides Zusammen ist **IDU**
+→ Nur als Festlegung der Sprache sonst nichts, nur damit man weiß was gemeint ist
+**PDU** geht von Absender Seite zur *Peer-Entität* (Empfänger)
+## Horizontale und Vertikale Kommunikation S.89
+
+---
+
+Wiederholung Ende 
+
+--- 
+
+# Schnittstelle
+hat er nur kurz erklärt
+
