Quartz sync: May 3, 2024, 10:14 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
@@ -8,11 +8,14 @@ fach: "[[RNVS]]"
 Thema: "[[TCP]]"
 Benötigte Zeit: 
 date created: Thursday, 2. May 2024, 23:16
-date modified: Friday, 3. May 2024, 09:41
+date modified: Friday, 3. May 2024, 10:13
 ---
+
 # TODO
 
 - [ ] IDU,ICI,PCI,SDU,UD,PDU Merkhilfen und Merkzettel was was ist
+- [ ] BLOCKIN,CONCATINATION etc. ist #klausurrelevant
+- [ ] Themen aus der Zusammenfassung besser ausarbeiten
 
 Geht weiter ab : S.96 Kapitel 2
 
@@ -338,3 +341,28 @@ Wiederholung Ende
 # Schnittstelle
 hat er nur kurz erklärt
 
+# Schichtfestlegung
+
+## Internet-Schichtenmodell
+
+Standard Internet Schichtenmodell was heutzutage verwendet wird
+
+- Anwendung
+	- HTTP
+	- FTP
+	- SNMP
+	- etc.
+- Transport
+	- **TCP**
+	- UDP
+- Vermittlung
+	- **IP**
+	- RIP
+	- BGP
+	- ICMP
+	- etc.
+- Netzanschluss
+	- ARP
+	- PPP
+
+TCP und IP eins der wichtigste eins zum transport, das andere zur Vermittlung
