Quartz sync: May 3, 2024, 11:02 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-3VL-03-05-2024/RNVS-3VL-03-05-2024.md
@@ -366,3 +366,8 @@ Standard Internet Schichtenmodell was heutzutage verwendet wird
 	- PPP
 
 TCP und IP eins der wichtigste eins zum transport, das andere zur Vermittlung
+→ Internet verwendet Internet-Protokoll  obwohl ISO OSI besser, aber Internet ist halt normalisiert
+
+# ISO / OSI
+
+ 
