Quartz sync: May 9, 2024, 11:54 PM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-2VL-26-04-2024/RNVS-2VL-26-04-2024.md
@@ -10,7 +10,7 @@ Thema:
   - "[[Rechnernetze]]"
 Benötigte Zeit: 
 date created: Friday, 26. April 2024, 09:13
-date modified: Thursday, 2. May 2024, 23:41
+date modified: Thursday, 9. May 2024, 23:03
 ---
 
 *Geht weiter ab Kapitel 2-S.31*
@@ -208,7 +208,7 @@ Deswegen Modularität
 - Enthalten technische und organisatorische Ideen für die Entwicklung des Internets
 - Community diskutiert, ob Dokument passier
 - RFC [Humor](<https://de.wikipedia.org/wiki/Request_for_Comments#Humor_in_RFC:~:text=(HTTP)%20genannt.-,Humor%20in%20RFC,-%5BBearbeiten%20%7C>)
- - [ ] RFC 1958 [lesen](https://datatracker.ietf.org/doc/html/rfc1958)
+ - [x] RFC 1958 [lesen](https://datatracker.ietf.org/doc/html/rfc1958) [completion:: 2024-05-09]
  - RFC und Internet ist demokratisch entstanden
  - Konstruktionsprinzip des Internets
 	 - Schichtung
