Quartz sync: May 10, 2024, 12:20 AM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
@@ -8,7 +8,7 @@ fach: "[[RNVS]]"
 Thema: "[[TCP]],[[UDP]]"
 Benötigte Zeit: 
 date created: Thursday, 9. May 2024, 23:02
-date modified: Thursday, 9. May 2024, 23:47
+date modified: Thursday, 9. May 2024, 23:56
 ---
 
 # Thema Transport
@@ -23,6 +23,18 @@ date modified: Thursday, 9. May 2024, 23:47
 > 		- Verbindungsauf-und-abbau
 > 		- Sequenznummern & Quittungen
 > 	- Verbindungslos
+
+>[!tip] Kurzüberblick Transport
+> **Grundkonzept**: Transportprotokolle und -prozesse sichern Datenübertragungen zwischen Endsystemen in Netzwerken.
+> - **Flusssteuerung**: Verhindert Datenüberflutung beim Empfänger.
+> - **Staukontrolle**: Reduziert Netzwerküberlastung.
+> - **Hauptprotokolle**:
+>   - **TCP**: Zuverlässig, verbindungsorientiert, mit Fluss- und Staukontrolle.
+>   - **UDP**: Schnell, verbindungslos, ohne Übertragungsgarantien.
+> - **Methoden**:
+>   - **Verbindungsorientiert (TCP)**: Drei-Wege-Handshake, Quittungen, Sequenznummern.
+>   - **Verbindungslos (UDP)**: Kein Verbindungsaufbau, schneller Transfer, ideal für zeitkritische Anwendungen.
+
 
 ---
 
@@ -86,6 +98,11 @@ Der unten stehende Teil wurde im Voraus ohne Vorliegen des Skriptes herausgearbe
 > 
 > Die Auswahl zwischen verbindungsorientierten und verbindungslosen Ansätzen hängt stark von den Anforderungen der spezifischen Anwendung und den Netzwerkbedingungen ab.
 
+---
+<div style="display:flex; justify-content:center;; ">
+genauere Ausarbeitung ↓
+</div>
+---
 # [[Flusssteuerung und Staukontrolle]]
 
 Die Flusssteuerung und Staukontrolle sind zwei wesentliche Mechanismen in Netzwerkprotokollen, die dazu beitragen, die Effizienz und Zuverlässigkeit der Datenübertragung zwischen Computern in einem Netzwerk zu gewährleisten. Diese Techniken sind besonders wichtig in Umgebungen, wo das Risiko von Datenverlust oder Netzwerküberlastung besteht.
@@ -137,7 +154,7 @@ Im Gegensatz zu TCP ist UDP ein verbindungsloses Protokoll, das sich durch gerin
 Beide Protokolle, TCP und UDP, spielen eine zentrale Rolle in der modernen Netzwerkkommunikation, indem sie unterschiedliche Bedürfnisse hinsichtlich Geschwindigkeit und Zuverlässigkeit erfüllen.
 
 
-# Netzunabhängiger Transport von Nachrichten zwischen Endsystemen
+# [[Netzunabhängiger Transport von Nachrichten zwischen Endsystemen]]
 
 Der Transport von Nachrichten zwischen Endsystemen in Netzwerken kann auf zwei grundlegende Arten erfolgen: verbindungsorientiert und verbindungslos. Jeder dieser Ansätze hat spezifische Eigenschaften und wird je nach den Anforderungen der Anwendung und den Netzwerkbedingungen ausgewählt.
 
