Quartz sync: May 10, 2024, 2:49 PM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
@@ -8,7 +8,7 @@ fach: "[[RNVS]]"
 Thema: "[[TCP]],[[UDP]]"
 Benötigte Zeit: 
 date created: Thursday, 9. May 2024, 23:02
-date modified: Friday, 10. May 2024, 00:20
+date modified: Friday, 10. May 2024, 10:52
 ---
 
 # Thema Transport
@@ -186,4 +186,35 @@ Ab hier folgen Notizen aus der Vorlesung
 
 ---
 # Vorlesung
+
+Einstieg: S.162 Kapitel 2
+- [ ] Jupyter Notebook rumspielen
+- [ ] Fragen aus S.176 und 177 lesen, beantworten und verstehen
+
+Kapitel 3 einstieg
+
+## Verbindungslos & Verbindungsorientiert S.16 
+
+- keine Verbindung zwischen Entitäten
+- Zustand der Entitäten irrelevant 
+- Bessere Kommunikationsleistung schlechtere Zuverlässigkeit
+
+Verbindungsorientiert 
+- Abhängigkeit zwischen Entitäten (kontext relevant)
+- Umfangreiche Fehlerbehandlung (Zuverlässigkeit)
+- Höherer Verarbeitungsaufwnad (notwendig)
+
+Frage:: #Frage Kann man TCP nicht durch hohe Anzahl von UDP Paketen ersetzen um eine ähnliche Zuverlässigkeit zu bekommen?
+ → TCP ist für eine zuverlässige, verbindungsbasierte Kommunikation mit Fluss und Kongestionskontrolle. UDP kann dass nicht mehr einer erhöhten Anzahl von Paketen ersetzen, da UDP keine Reihenfolge und Fluss-und-Kongestionskontrolle bietet
+
+A: CLS → B 
+B: CLSB → A
+Dies bedeuetet jedoch NUR, dass A nicht mehr Kommuniziert, B bestätigt mit CLSB nur, dass das CLS angekommen. B kann immernoch Daten abschicken.
+Erst wenn B ein CLS schickt und A mit CLSB antwortet, beendet B seine Kommunikation
+
+Nutzdatn, Systemdaten können immer verschickt werden, zum Beispiel bei A was nach seinem CLS immernoch B mit CLS Antworten kann 
+- [ ] Als Diagramm darstellen in mermaid 
+
+## Sequenznummern und Quittungen 
+
 
