Quartz sync: May 10, 2024, 3:50 PM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
@@ -5,12 +5,18 @@ tags:
   - RNVS
   - vorlesung
 fach: "[[RNVS]]"
-Thema: "[[TCP]],[[UDP]]"
+Thema: 
 Benötigte Zeit: 
 date created: Thursday, 9. May 2024, 23:02
-date modified: Friday, 10. May 2024, 10:52
+date modified: Friday, 10. May 2024, 11:41
 ---
 
+Einstieg: S Kapitel 2
+- [ ] Jupyter Notebook rumspielen
+- [ ] Fragen aus S und 177 lesen, beantworten und verstehen
+
+Kapitel 3 einstieg
+Ende S.60
 # Thema Transport
 
 >[!info] Themen
@@ -192,6 +198,7 @@ Einstieg: S.162 Kapitel 2
 - [ ] Fragen aus S.176 und 177 lesen, beantworten und verstehen
 
 Kapitel 3 einstieg
+Ende S.60
 
 ## Verbindungslos & Verbindungsorientiert S.16 
 
@@ -216,5 +223,10 @@ Nutzdatn, Systemdaten können immer verschickt werden, zum Beispiel bei A was na
 - [ ] Als Diagramm darstellen in mermaid 
 
 ## Sequenznummern und Quittungen 
+- [ ] Aufschreiben was ein Sequenzprotokoll ist 
+      
+• Beispiel: 
+	• Sei RTD = 15ms, Senderate 200/ms 
+	• Benötigt: 12 Bits zur Codierung der Sequenznummern (weil 15\*200 $\approx$ 3000, brauchen als mindesten $2^{12}$ Bits )
 
-
+Sequenznummern werdenr bei Sender und Empfänger werden als zufällige Zahl ausgesucht, die gegenseitigen Sequenznummern inkrementieren sich dann gegenseitig um die erhaltenen Daten
