Quartz sync: May 13, 2024, 8:00 PM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-4VL-10-05-2024/RNVS-4VL-10-05-2024.md
@@ -12,7 +12,7 @@ date modified: Friday, 10. May 2024, 11:41
 ---
 
 Einstieg: S Kapitel 2
-- [ ] Jupyter Notebook rumspielen
+- [x] Jupyter Notebook rumspielen [completion:: 2024-05-13]
 - [ ] Fragen aus S und 177 lesen, beantworten und verstehen
 
 Kapitel 3 einstieg
