Quartz sync: May 15, 2024, 9:22 PM

--- a/content/4.Semester/Informatik/FSK/FSK-Zentralübung/FSK-03-ZÜ-15-05-2024.md
+++ b/content/4.Semester/Informatik/FSK/FSK-Zentralübung/FSK-03-ZÜ-15-05-2024.md
@@ -7,7 +7,7 @@ fach: "[[FSK]]"
 Thema: 
 Benötigte Zeit:
 date created: Wednesday, 15. May 2024, 12:23
-date modified: Wednesday, 15. May 2024, 13:32
+date modified: Wednesday, 15. May 2024, 17:42
 ---
 
 [Skript](https://www.tcs.ifi.lmu.de/lehre/ss-2024/fsk_de/zue-03-regulaere-ausdruecke-abschluss-pumping-lemmas.pdf)
@@ -228,11 +228,11 @@ Jede kontextfreie Sprache hat die **Pumping-Eigenschaft**.
 
 # Aufgabe: Kontextfreiheit widerlegen
 
-### Aufgabe
+## Aufgabe
 
 Zeige, dass $L_4 = \{a^m b a^m b a^m \mid m \in \mathbb{N}\}$ nicht kontextfrei ist.
 
-### Beweis
+## Beweis
 
 **Mit dem Pumping-Lemma:**
 
@@ -242,7 +242,7 @@ Zeige, dass $L_4 = \{a^m b a^m b a^m \mid m \in \mathbb{N}\}$ nicht kontextfrei 
 - Dann kann $vwx$ nicht zwei $b$'s enthalten.
 - Fall $vx$ enthält ein $b$: Dann $uv^0 wx^0 y \notin L_4$, da das $b$ entfernt wurde. Widerspruch.
 - Fall $vx$ enthält kein $b$: Dann $uv^2 wx^2 y \notin L_4$, da maximal zwei $a$-Folgen aufgepumpt wurden, die dritte $a$-Folge aber noch aus $n$ vielen $a$'s besteht (und die Trennung durch $b$ noch vorhanden ist). Widerspruch.
-### Erklärung
+## Erklärung
 
 **Das Pumping-Lemma für kontextfreie Sprachen:**
 
